--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-Hello World
+<!DOCTYPE html>
+<html>
+  <body>
+    <h1>Hello World</h1>
+    <p>I decided to take this class because I don't know much about designing Web pages and I've wanted to learn about this. I'm looking into going into digital marketing and photography when I go to college, and my homeroom teacher said that this would be a good class to take that may give me an idea about my career path. The class sounds interesting and fun and I'm excited to learn some new things in it!</p>
+  </body>
+</html>
