--- a/index.html
+++ b/index.html
@@ -1,7 +1,25 @@
 <!DOCTYPE html>
 <html>
+
+  <head>
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
+  </head>
+
   <body>
     <h1>Hello World</h1>
-    <p>I decided to take this class because I don't know much about designing Web pages and I've wanted to learn about this. I'm looking into going into digital marketing and photography when I go to college, and my homeroom teacher said that this would be a good class to take that may give me an idea about my career path. The class sounds interesting and fun and I'm excited to learn some new things in it!</p>
+    <p>This is my first paragraph.</p>
+    <p>This is my second paragraph. <br>And this is a new line, BUT I'm still a part of the same paragraph.</p>
+<h2 style="color:red;">This is an H2 Heading and colored red</h2></h2>
+<h3 style="background-color:powderblue;">This is a H3 heading with a background color of powder blue</h3>
+<h5 style="font-family:verdana;"> This is a H5 heading using the Verdana font</h4>
+  <p style="font-size:160%;">This is a paragraph sized to 160%</p>
+  <p <a href="http://www.wlavikings.org/">This is a link to my school's website.</a>
+  <p title="I'm a tooltip">
+  I'm a tooltip.</p>
+  <pre> My Bonnie lies over the ocean<br>My Bonnie lies over the sea<br>My Bonnie lies over the ocean<br>So bring back my Bonnie to me<pre></pre></p>
   </body>
+  
+  
+
 </html>
