--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <h3 style="background-color:powderblue;">This is a H3 heading with a background color of powder blue</h3>
 <h5 style="font-family:verdana;"> This is a H5 heading using the Verdana font</h4>
   <p style="font-size:160%;">This is a paragraph sized to 160%</p>
-  <p <a href="http://www.wlavikings.org/">This is a link to my school's website.</a>
+  <a href="http://www.wlavikings.org/">This is a link to my school's website.</a>
   <p title="I'm a tooltip">
   I'm a tooltip.</p>
   <pre> My Bonnie lies over the ocean<br>My Bonnie lies over the sea<br>My Bonnie lies over the ocean<br>So bring back my Bonnie to me<pre></pre></p>
